# project-groupeC-ai-food-planner

.github/workflows/: ci.yml
backend/: CMakeLists.txt
backend/src/: main.c
frontend-web/: package-lock.json
